@@ -2,40 +2,55 @@ package com.example.demo.security;
 
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
+
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
 public class UserPrincipal implements UserDetails {
-    private Long id;
     private String username;
     private String role;
-    
-    public UserPrincipal(Long id, String username, String role) {
-        this.id = id;
+
+    public UserPrincipal(String username, String role) {
         this.username = username;
         this.role = role;
     }
-    
+
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(() -> "ROLE_" + role);
+        return Collections.singletonList((GrantedAuthority) () -> "ROLE_" + role);
     }
-    
+
     @Override
-    public String getPassword() { return null; }
-    
+    public String getPassword() {
+        return null;
+    }
+
     @Override
-    public String getUsername() { return username; }
-    
+    public String getUsername() {
+        return username;
+    }
+
     @Override
-    public boolean isAccountNonExpired() { return true; }
+    public boolean isAccountNonExpired() {
+        return true;
+    }
+
     @Override
-    public boolean isAccountNonLocked() { return true; }
+    public boolean isAccountNonLocked() {
+        return true;
+    }
+
     @Override
-    public boolean isCredentialsNonExpired() { return true; }
+    public boolean isCredentialsNonExpired() {
+        return true;
+    }
+
     @Override
-    public boolean isEnabled() { return true; }
-    
-    public Long getId() { return id; }
-    public String getRole() { return role; }
+    public boolean isEnabled() {
+        return true;
+    }
+
+    public String getRole() {
+        return role;
+    }
 }
